fix: fix clock icons alignment

--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -87,6 +87,7 @@
     border: 1px solid $borderColor;
     border-left: none;
     border-right: none;
+    text-transform: capitalize;
 }
 .right-sidebar__search:before {
     content: '';
